--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "moment-timezone": "^0.5.13",
         "ms": "^2.0.0"
     },
-    "engines": {
-        "node": "^8.0.0"
+	"engines":{
+		"node": "6.3.1"
     }
 }
